# HappyPaws

./: Dockerfile  README.md  compose.yaml
Biltmore_Test/: index.html  test.js  test.jsx  test2.js
HappyPaws/: .gitignore  Dockerfile  compose.yaml  docker_fix.txt  package-lock.json  package.json
HappyPaws/src/: pyproject.toml  server.py  utils.py
HappyPaws/src/db/: __init__.py  db_manager.py  db_setup.sh  populate.py  setup.py
HappyPaws/src/models/: __init__.py  base.py  breed.py  comment.py  food.py  login.py  pet.py  post.py  reminder.py  supplement.py  user.py
HappyPaws/src/routers/: breeds.py  comments.py  foods.py  pets.py  posts.py  reminders.py  supplements.py  users.py
HappyPaws/src/scripts/: check.sh  fix-python.sh  test-server.sh  test-ui.sh
HappyPaws/src/selenium/: breeds_selenium.py  dry_food_selenium.py  supplement_selenium.py
HappyPaws/src/tests/: test_example_endpoints.py
HappyPaws/src/tests/db/: conftest.py  test_users.py  test_verify_test_db.py
HappyPaws/src/ui/: .eslintrc.json  .prettierignore  index.html  package-lock.json  package.json
HappyPaws/src/ui/.parcel-cache/: 21c516b0d3df2a8d  752078a6ed3fb5b8.txt  data.mdb  lock.mdb
HappyPaws/src/ui/forum/: index.html  post.html  post_script.js  post_style.css  script.js  style.css
HappyPaws/src/ui/js/: goodbye-world.js  hello-world.js  main.js
HappyPaws/src/ui/js/test/: run-tests-mocha.js
HappyPaws/src/ui/login_page/: index.html  script.js  style.css
HappyPaws/src/ui/profile_new/: index.html  script.js  style.css
Study/: index.html  script.js  style.css
Trekbag/: index.html  (+2 more)
(+68 files in other folders)
